# Basic-3D-Engine

./: .gitignore  CMakeLists.txt  README.md  build.bat
assets/shaders/: vertex.glsl
include/: basic_graphics.hpp  camera.hpp  entity.hpp  mesh.hpp
include/glad/: glad.h
src/: main.cpp
src/graphics/: basic_graphics.cpp
src/scene/: mesh.cpp
src/utils/: glad.c
